# HERMES-PRIME

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FOUNDATIONAL_PRIMITIVES.md  LICENSE  MONOREPO_LAYOUT.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SECURITY.md  STACK_ANALYSIS.md  WORKSPACE_MANIFEST.yaml  _config.yml  install.sh  pyproject.toml
.github/: RELEASE_CHECKLIST.md  dependabot.yml
.github/workflows/: ci.yml  create-release-on-tag.yml  deploy-docs.yml  publish.yml  update_repo_metadata.yml
claude-code-refrlow/: COST_MODEL.md  DESIGN.md  HERMES_INTEGRATION.md  PROTOCOLS.md  README.md  SECURITY.md  SUBAGENT_TAXONOMY.md
claude-code-refrlow/prompts/: CLAUDE.md  miner-system-prompt.md  runner-system-prompt.md
claude-code-refrlow/skeleton/: QUICKSTART.md  pyproject.toml
claude-code-refrlow/skeleton/refrlow/: __init__.py  dispatcher.py  protocol.py  reports.py  sandbox.py
claude-code-refrlow/skeleton/refrlow/miners/: __init__.py  ast_miner.py  base.py  file_miner.py  grep_miner.py  summarizer.py
claude-code-refrlow/skeleton/tests/: test_file_miner.py  test_protocol.py
cognitive-trust/: README.md
cognitive-trust/doctrine/: DOCTRINE.md  INVARIANTS.md  THREAT_MODEL.md
cognitive-trust/fabric/: ARCHITECTURE.md  INDEXING.md  MINER_CATALOG.md  REPORTS.md
cognitive-trust/integration/: COMPOSITION.md  HERMES_MAPPING.md  REFRLOW_BRIDGE.md
cognitive-trust/operations/: SLA.md
cognitive-trust/pki/: ARCHITECTURE.md  ATTESTATIONS.md  LIFECYCLE.md  LINEAGE.md  TRUST_TIERS.md
cognitive-trust/runbooks/: production-deploy.md
cognitive-trust/simulation/: README.md
cognitive-trust/skeleton/: README.md  pyproject.toml
cognitive-trust/skeleton/cogtrust/: __init__.py  attestations.py  lineage.py  revocation.py  service.py  signing.py  tiers.py  verification.py
cognitive-trust/skeleton/cogtrust/reviewer_ui/: __init__.py  presenter.py  session.py  submitter.py
cognitive-trust/skeleton/cogtrust/signers/: kms.py
cognitive-trust/skeleton/cogtrust/stores/: sqlite_lineage.py
cognitive-trust/skeleton/cogtrust/workers/: async_cascade.py
cognitive-trust/skeleton/tests/: test_async_cascade.py  test_attestation_service.py  test_reviewer_ui.py  test_sqlite_lineage.py
core/hermes_agent/: __init__.py  orchestrator.py
docs/: architecture.md  guardrails.md  index.md  memory_governance.md  setup.md  usage.md
graphify-out/: graph.json
hermes/: CLI_IDENTITY.md  DOCTRINE.md  FABRIC_MINERS_DESIGN.md  FAILURE_MODES.md  GATES.md  INVARIANTS.md  README.md  SCHEMA_REGISTRY.md  THREAT_MODEL.md
hermes/decisions/: 0001-split-trust-architecture.md  0002-deterministic-sentinel-dominance.md  0003-envelope-encryption-argon2id.md  0004-capability-tokens.md  0005-atlas-belief-store.md  0006-hermes-untrusted.md  0007-foundational-primitives-and-complexity-bounds.md  0008-miner-attestation-and-resource-exhaustion-governance.md  0009-sentinel-core-design.md  0009-sentinel-first-build-sequence.md  README.md  _TEMPLATE.md
hermes/invariants/: capability.md  execution.md  memory.md  provenance.md  rollback.md
hermes/simulation/: CAPABILITY_REGISTRY.md  INCIDENTS.md  README.md  SKILLS.md  day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  day-16.md  day-17.md  day-18.md  day-19.md  day-20.md  day-21.md  day-22.md  day-23.md  day-24.md  day-25.md  day-26.md  day-27.md  day-28.md  day-29.md  day-30.md  day-31.md  day-32.md  day-33.md  day-34.md  day-35.md  day-36.md  (+24 more)
hermes_prime/: __init__.py  __main__.py  cli.py  config.py  contracts.py  cron_jobs.py  gateway.py  infrastructure_setup.py  profiles.py  recovery.py  secrets.py  sessions.py  signing.py  skills_hub.py  system_doctor.py  utils.py
hermes_prime/agent/: __init__.py  governed_dispatch.py  identity.py  kanban.py  loop.py  repl.py  session.py  subagent.py  tool_registry.py  types.py
hermes_prime/autonomous/: __init__.py  executor.py  inference_logger.py  proposal_parser.py
hermes_prime/brain/: __init__.py  journal.py  linker.py  maintenance.py  neural_graph.py
hermes_prime/gateway/: governed_gateway.py
hermes_prime/learning/: __init__.py  augmenter.py  engine.py  outcome.py  registry.py
hermes_prime/llm/: __init__.py  client.py  discovery.py  ollama_adapter.py  prompt_builder.py  vllm_adapter.py
hermes_prime/memory/: __init__.py  base.py  compiler.py  consolidation.py  decay.py  depth.py  governor.py  graph.py  graphify_bridge.py  provenance.py  records.py  store.py
hermes_prime/orch/: __init__.py  mesh.py  (+6 more)
infrastructure/: __init__.py  backends.py
miners/: __init__.py
scripts/: functional_smoke_test.py  generate_graphify_graph.py
tests/: __init__.py  test_agent_identity.py  test_agent_loop.py  test_agent_loop_llm.py  test_agent_repl.py  test_agent_session.py  test_agent_subagent.py  test_agent_tools_code_exec.py  test_agent_tools_terminal.py  test_agent_tools_todo.py  test_agent_tools_vision.py  test_agent_tools_voice.py  test_agent_tools_web_search.py  test_autonomous_pipeline.py  test_backends.py  test_brain.py  test_cli_agent_commands.py  test_cli_and_bundle.py  test_cli_commands.py  test_config.py  test_consolidation.py  test_context_compiler.py  test_contracts.py  test_cron_jobs.py  test_decay.py  test_fabric_and_orchestrator.py  test_gateway.py  test_governed_dispatch.py  test_governor.py  test_graphify_backend.py  test_graphify_bridge.py  test_hardening.py  test_infrastructure_setup.py  test_kanban.py  test_knowledge_graph.py  test_learning_loop.py  test_llm_adapters.py  test_llm_discovery.py  test_mem0_backend.py  test_memory_fabric.py  (+15 more)
(+71 files in other folders)
