[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-prime"
version = "0.2.1"
description = "Sovereign, deterministic governance engine for autonomous AI operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ATLAS-DEV78423", email = "atlas@hermes-prime.dev"},
]
keywords = ["governance", "ai-safety", "policy-engine", "opa", "autonomous-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "tree_sitter>=0.25.0",
    "tree_sitter_python>=0.25.0",
    "tree_sitter_javascript>=0.25.0",
    "tree_sitter_typescript>=0.23.0",
    "wasmtime>=44.0.0",
    "pydantic>=2.13.4,<3",
    "requests>=2.31.0",
    "openai>=2.24.0,<3",
    "prompt_toolkit>=3.0.52,<4",
    "rich>=14.3.3,<15",
    "httpx[socks]>=0.28.1,<1",
    "pyyaml>=6.0.3,<7",
    "jinja2>=3.1.6,<4",
    "tenacity>=9.1.4,<10",
    "python-dotenv>=1.2.2,<2",
]

[project.urls]
Homepage = "https://github.com/ATLAS-DEV78423/HERMES-PRIME"
Repository = "https://github.com/ATLAS-DEV78423/HERMES-PRIME"
Documentation = "https://github.com/ATLAS-DEV78423/HERMES-PRIME#readme"
Issues = "https://github.com/ATLAS-DEV78423/HERMES-PRIME/issues"

[project.optional-dependencies]
llm = ["ollama>=0.1.0"]
memory = ["chromadb>=0.4.0"]
tui = ["textual>=0.40.0", "rich>=13.0.0"]
vault = ["hvac>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "PyYAML>=6.0.0",
]
gateway = [
    "slack-bolt>=1.27.0,<2",
    "discord.py>=2.7.1,<3",
    "python-telegram-bot[webhooks]>=22.6,<23",
    "aiohttp>=3.13.3,<4",
]
# NOTE:
# The `all` extra was intentionally removed to avoid a self-referential
# packaging loop. If you want an explicit combined extras list, add a
# non-self-referential array here, for example:
# all = ["llm", "memory", "tui", "vault", "dev"]
[project.scripts]
hermes-prime = "hermes_prime.cli:main"
hermes = "hermes_prime.cli:main"
sentinel = "hermes_prime.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"infrastructure.policy_engine" = ["policies/*.rego", "schemas/*.json"]

[tool.setuptools.packages.find]
include = ["hermes_prime*", "core*", "infrastructure*", "miners*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "external",
    "claude-code-refrlow",
    "cognitive-trust",
    "hermes_prime.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F841"]
"**/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disable_error_code = [
    "union-attr",
    "attr-defined",
    "assignment",
    "arg-type",
    "call-arg",
    "return-value",
    "index",
    "name-defined",
]
