[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refrlow"
version = "0.1.0"
description = "Reference-flow architecture for delegated context retrieval in coding agents"
readme = "QUICKSTART.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Refrlow contributors"}]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["refrlow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
