[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cogtrust"
version = "0.1.0"
description = "Cognitive Trust reference implementation: attestations, lineage, revocation, verification"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Cognitive Trust contributors"}]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cogtrust*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
